add tpcds runner function, which can run tpcds queries by id

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,3 +35,10 @@ install(
   DESTINATION
     ${TPCDS_INSTALL_DIR}
 )
+
+install(
+  FILES
+    ${CMAKE_CURRENT_SOURCE_DIR}/pg_tpcds_cleanup.sql
+  DESTINATION
+    ${TPCDS_INSTALL_DIR}
+)
