feat: use table_tuple_insert instead of sql

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,66 +1,13 @@
 {
-  "files.associations": {
-    "functional": "cpp",
-    "array": "cpp",
-    "atomic": "cpp",
-    "bit": "cpp",
-    "*.tcc": "cpp",
-    "cctype": "cpp",
-    "charconv": "cpp",
-    "cinttypes": "cpp",
-    "clocale": "cpp",
-    "cmath": "cpp",
-    "compare": "cpp",
-    "concepts": "cpp",
-    "cstdarg": "cpp",
-    "cstddef": "cpp",
-    "cstdint": "cpp",
-    "cstdio": "cpp",
-    "cstdlib": "cpp",
-    "cstring": "cpp",
-    "ctime": "cpp",
-    "cwchar": "cpp",
-    "cwctype": "cpp",
-    "deque": "cpp",
-    "string": "cpp",
-    "unordered_map": "cpp",
-    "vector": "cpp",
-    "exception": "cpp",
-    "algorithm": "cpp",
-    "iterator": "cpp",
-    "memory": "cpp",
-    "memory_resource": "cpp",
-    "numeric": "cpp",
-    "optional": "cpp",
-    "random": "cpp",
-    "string_view": "cpp",
-    "system_error": "cpp",
-    "tuple": "cpp",
-    "type_traits": "cpp",
-    "utility": "cpp",
-    "initializer_list": "cpp",
-    "iosfwd": "cpp",
-    "limits": "cpp",
-    "new": "cpp",
-    "numbers": "cpp",
-    "ostream": "cpp",
-    "span": "cpp",
-    "stdexcept": "cpp",
-    "streambuf": "cpp",
-    "typeinfo": "cpp",
-    "variant": "cpp",
-    "format": "cpp",
-    "filesystem": "cpp",
-    "sstream": "cpp",
-    "chrono": "cpp",
-    "codecvt": "cpp",
-    "ratio": "cpp",
-    "iomanip": "cpp",
-    "istream": "cpp",
-    "fstream": "cpp",
-    "*.sql": "sql",
-    "ranges": "cpp",
-    "tpcds.idx.h": "c",
-    "iostream": "cpp"
-  }
+  "clangd.arguments": [
+    "-j=12",
+    "--compile-commands-dir=build",
+    "--background-index",
+    "--clang-tidy",
+    "--completion-style=detailed",
+    "--function-arg-placeholders",
+    "--header-insertion=iwyu",
+    "--header-insertion-decorators",
+    "--pch-storage=disk"
+  ]
 }
